Add Ropa and Jambalaya pages. Edit index, lasagna to reflect changes.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,13 +5,30 @@
         <meta charset="utf-8">  
     </head>
     <body>
-        <H1>How to make delicious lasagna at home</H1>  
-        <ol>
-            <li>Purchase Costco Frozen Lasgna (the spicy one)</li> 
-            <li>Preheat oven as directed on package</li>  
-            <li>Cook as directed on package</li>
-            <li><strong>ENJOY!</strong></li>  
-        </ol>
+        <H1>How to make delicious lasagna at home</H1>
+        <img src="https://www.tastingtable.com/img/gallery/the-best-frozen-meal-at-costco-is-a-kirkland-signature-favorite/what-social-media-has-to-say-about-costcos-frozen-lasagna-1731320828.webp" Image of Kirkland Signature Italian Beef and Sausage frozen lasagna, in package. />
+        
+        <H2>Kirkland Signature Italian Sausage and Beef Frozen Lasagna</H2>
+        <p>Making Kirkland Signature Italian Sausage and Beef Frozen Lasgna at home is 
+            simple and <em>delicious</em>! Simply follow these easy steps and you will be 
+            enjoying your Kirkland Signature Italian Sausage and Beef Frozen Lasagna in
+            no time!
+        </p>
+        <h3>Ingredients:</h3>
+            <ul>
+                <li>Vehicle with sufficient fuel for your journey</li>
+                <li>Enough money to purchase lasagna (approximately $17 USD)</li>
+                <li>An oven</li>
+            </ul>
+        <h3>Steps</h3>
+            <ol>
+                <li>Drive to Costco</li>
+                <li>Purchase Kirkland Signature Italian Sausage and Beef frozen Lasagna</li>
+                <li>Return home</li> 
+                <li>Preheat oven as directed on package</li>  
+                <li>Cook as directed on package</li>
+                <li><strong>ENJOY!</strong></li>  
+            </ol>
 
         <h2>Return to <a href="../index.html">Home</a></h2>   
     </body>
