--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/ropa-vieja.html">Cuban Ropa Vieja</a></li>
+            <li><a href="recipes/jambalaya.html">Jambalya</a></li>
         </ul>
     </body>
 </html>
