Edit typos in lasagna and jambalaya

--- a/recipes/jambalaya.html
+++ b/recipes/jambalaya.html
@@ -10,7 +10,7 @@
         Image of Zatarain's One Pot Jambalaya Mix in box />
         
         <H2>Zatarain's Jambalaya</H2>
-        <p>Making Jambalaya at home is simple and <em>delicious</em>! Simply 
+        <p>Making Jambalaya at home is easy and <em>delicious</em>! Simply 
             follow these easy steps and you will be enjoying your tasty jambalaya 
             in no time!
         </p>
