--- a/recipes/ropa-vieja.html
+++ b/recipes/ropa-vieja.html
@@ -10,7 +10,7 @@
         Image of prepared ropa vieja with black beans and white rice, garnished with lime and parsley. />
         
         <H2>Cuban Ropa Vieja</H2>
-        <p>Making Cuban Ropa Vieja at home is simple and <em>delicious</em>! Simply 
+        <p>Making Cuban Ropa Vieja at home is easy and <em>delicious</em>! Simply 
             follow these easy steps and you will be enjoying your Cuban Ropa Vieja 
             in no time!
         </p>
@@ -31,7 +31,7 @@
             </ul>
         <h3>Steps</h3>
             <ol>
-                <li>Head vegetable oil in a large skillet over
+                <li>Heat vegetable oil in a large skillet over
                     medium-high heat. Brown the flank steak on
                     each side, about 4 mins per side.</li>
                 <li>Transfer beef to slow cooker.</li>
@@ -42,7 +42,7 @@
                 <li>Stir until well blended.</li>
                 <li>Cover and cook for 4hrs on high or up to
                     10hrs on low.</li>
-                <li>Shred meat and serve with rice or tortillas</li>
+                <li>Shred meat and serve with rice or tortillas.</li>
                 <li><strong>ENJOY!</strong></li>  
             </ol>
 
